[metadata]
name = aiobcrypt
version = 3.2.0.post2
author = Rick Voormolen
author_email = rick@hostingcoach.nl
description = aiobcrypt is a library/wrapper for asynchronous bcrypt hashing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blokje/aiobcrypt
project_urls = 
    Github = https://github.com/blokje/aiobcrypt
    Bug Tracker = https://github.com/blokje/aiobcrypt/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable

[options]
packages = aiobcrypt
python_requires = >= 3.7
install_requires =
    bcrypt>=3.2.0,<=3.3.0

[options.package_data]
aiobcrypt = py.typed
